fixed z-index of topnav on small screens

--- a/src/routes/PrimaryLayout/components/TopNav/TopNav.scss
+++ b/src/routes/PrimaryLayout/components/TopNav/TopNav.scss
@@ -269,6 +269,10 @@ a.logo-hover {
 
   }
 
+  .topNavWrapper {
+    z-index: 80;
+  }
+
 
   .topNav.groupMenuOpen .drawerToggle {
     margin-left: -65px;
